k8s/aut-sys/apps/actual-budget/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
  labels: &labels
    app.kubernetes.io/name: actual-budget
    app.kubernetes.io/component: webserver
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-data

      containers:
        - name: actual-budget
          image: ghcr.io/actualbudget/actual-server
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - name: http
              containerPort: 5006
          readinessProbe:
            httpGet:
              port: http
          resources:
            requests:
              cpu: "10m"
            limits:
              memory: "200M"
